--- a/mysql-deploy_mysql/my_cnf/my_mysql.cnf
+++ b/mysql-deploy_mysql/my_cnf/my_mysql.cnf
@@ -49,7 +49,7 @@ wait_timeout = 86400
 interactive_timeout = 86400
 
 connect_timeout = 20
-slave-net-timeout = 30
+#slave-net-timeout = 30
 
 max-relay-log-size = 256M
 relay-log = relay-bin
